Bug 283072 - "Application Name" field of "Create new project" dialog stays disabled
Summary: "Application Name" field of "Create new project" dialog stays disabled
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.60
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-30 08:03 UTC by Chaos A.D.
Modified: 2011-10-14 11:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chaos A.D. 2011-09-30 08:03:06 UTC
Version:           4.2.60
OS:                Linux

"Application Name" field of "Create new project" dialog stays disabled, when clicking to the Standard -> Terminal.
The problem is that bottom controls stays disabled until the second listbox selection changed by the user. 
But it is impossible, in case when listbox has only one element.

Reproducible: Didn't try

Steps to Reproduce:
Launch an app. 
Go to Projects -> New from template and select Standard -> Terminal


Expected Results:  
enable controls when clicking on first listbox, if the second has some items, probably.

OS: Linux (x86_64) release 2.6.38-11-generic
Compiler: gcc
Comment 1 Aleix Pol 2011-10-14 11:40:41 UTC
Git commit 6c6ed7314f9c83c899434cf0a5e20902edd86931 by Aleix Pol, on behalf of Lambert CLARA.
Committed on 13/10/2011 at 21:21.
Pushed by apol into branch 'master'.

Fix "Application Name" field of "Create new project" dialog stays disabled, due to currentChanged signal emitted before being connected in "New from template" popup.

BUG: 283072
REVIEW: 102841

M  +3    -3    plugins/appwizard/projectselectionpage.cpp

http://commits.kde.org/kdevplatform/6c6ed7314f9c83c899434cf0a5e20902edd86931