Fix "Application Name" field of "Create new project" dialog stays disabled, due to currentChanged signal emitted before being connected in "New from template" popup.

BUG: 283072
REVIEW: 102841